XML warning -> click -> XML Nabi -> move cursor